--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- end content -->
 <!-- footer -->
   <div id="footer">
-    <a href="https://github.com/darkstack">Github</a> | <a href="https://twitter.com/darkstack">Twitter</a> | <a href="https://news.ycombinator.com/user?id=Darkstack">Hn</a> | Mail : data:text/plain;base64,dGhvbWFzQGRhcmtzdGFjay5jb20=
+    <a href="https://github.com/darkstack">Github</a> | <a href="https://twitter.com/darkstack">Twitter</a> | <a href="https://news.ycombinator.com/user?id=Darkstack">Hn</a> | <span class="white">Mail</span> data:text/plain;base64,dGhvbWFzQGRhcmtzdGFjay5jb20=
   </div>
 <!-- end footer -->
 </body>
