--- a/errors/404.htm
+++ b/errors/404.htm
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Darkstack</title>
-  <base href="http://darkstack.com" />
+  <base href="http://darkstack.com/" />
   <link rel="home" href="http://darkstack.com/" />
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
@@ -13,13 +13,12 @@
 <body>
 <!-- head -->
   <div id="head">
-    <h1><a rel="home" href=".">Hi !</a></h1>
+    <h1><a rel="home" href=".">Back off !</a></h1>
   </div>
 <!-- end head -->
 <!-- content -->
   <div id="content_index">
-    <div id="imo" class="centered">
-      <a href="soon.html" title=""></a>
+    <div id="err" class="centered">
     </div>
   </div>
 <!-- end content -->
