--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 <!-- end head -->
 <!-- content -->
   <div id="content_index">
+    <div id="pres">
+      I'm Thomas, I like computers. 
+    </div>
     <div id="imo" class="centered">
-      <a href="soon.html" title=""></a>
     </div>
   </div>
 <!-- end content -->
