--- a/errors/404.htm
+++ b/errors/404.htm
@@ -7,7 +7,7 @@
   <title>Darkstack</title>
   <base href="http://darkstack.com/" />
   <link rel="home" href="http://darkstack.com/" />
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon.png" />
   <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
 </head>
 <body>
