--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Darkstack</title>
-  <base href="http://darkstack.com" />
-  <link rel="home" href="http://darkstack.com/" />
+  <base href="https://darkstack.com" />
+  <link rel="home" href="https://darkstack.com/" />
   <link rel="shortcut icon" href="favicon.png" />
   <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
 </head>
