--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 <!-- end content -->
 <!-- footer -->
   <div id="footer">
-    <a href="https://www.darkstack.com/blog">Blog</a> | <a href="https://github.com/darkstack">Github</a> | <a href="https://twitter.com/darkstack">Twitter</a> | <a href="https://news.ycombinator.com/user?id=Darkstack">Hn</a> | <span class="white">Mail</span> data:text/plain;base64,dGhvbWFzQGRhcmtzdGFjay5jb20=
+    <a target="_blank" href="https://www.darkstack.com/blog">Blog</a> | 
+    <a target="_blank" href="https://github.com/darkstack">Github</a> | 
+    <a target="_blank" href="https://twitter.com/darkstack">Twitter</a> | 
+    <a target="_blank" href="https://www.discogs.com/user/darkstack/collection">Discogs</a> | 
+    <a target="_blank" href="https://news.ycombinator.com/user?id=Darkstack">Hn</a> |
+    <span class="white">Mail</span> data:text/plain;base64,dGhvbWFzQGRhcmtzdGFjay5jb20=
   </div>
 <!-- end footer -->
 </body>
